# MDNotebook

./: .env.example  .gitignore  LICENSE  README.md  eslint.config.mjs  package-lock.json  package.json
.cargo/: config.toml
scripts/: generate-icon.mjs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/app/: error.tsx  global-error.tsx  globals.css  layout.tsx  page.tsx
src/components/: AppErrorBoundary.tsx  BacklinksPanel.tsx  Breadcrumbs.tsx  CommandPalette.tsx  ConfirmModal.tsx  ContextMenuOverlay.tsx  Editor.tsx  EditorErrorBoundary.tsx  FrontmatterEditor.tsx  HeaderBar.tsx  HelpPanel.tsx  Icons.tsx  PanelErrorBoundary.tsx  PassphraseScreen.tsx  ResizeHandle.tsx  SearchBar.tsx  SearchOverlay.tsx  SettingsPanel.tsx  SidebarItem.tsx  SidebarPanel.tsx  StatusBar.tsx  TabBar.tsx  TagInput.tsx  TemplateManager.tsx  TemplateModal.tsx  Toast.tsx  VaultSetup.tsx  VersionHistoryPanel.tsx  WikiLinkPicker.tsx
src/hooks/: useKeyboardShortcuts.ts
src/lib/: asset-crypto.ts  asset-manager.ts  crypto.ts  export-import.ts  local-vault.ts  notebook-context.tsx  notifications.ts  templates.ts  tree-utils.ts  types.ts  validate.ts
src/lib/__tests__/: crypto.test.ts  reducer.test.ts  tree-utils.test.ts
